# paybacktime

./: .gitignore  .gitmodules  3rd_party.txt  CMakeLists.txt  LICENSE  README.md  application.cpp  application.h  bloom.cpp  bloom.h  clock.cpp  clock.h  common.cpp  common.h  constants.h  display.cpp  display.h  file_system.h  geometry.cpp  geometry.h  gl_buffers.cpp  gl_buffers.h  gl_fbo.cpp  gl_fbo.h  gl_mesh.cpp  gl_mesh.h  gl_primitive.cpp  gl_primitive.h  gl_rbo.cpp  gl_rbo.h  gl_shaders.cpp  gl_shaders.h  gl_texture.cpp  gl_texture.h  gl_uniforms.h  highcaliber.exe.manifest  highcaliber.rc  image.cpp  image.h  image_atlas.cpp  (+37 more)
animations/character/: crouching_turn_90_left.ozz  crouching_turn_90_right.ozz  death_crouching_headshot_front.ozz  death_from_front_headshot.ozz  death_from_right.ozz  death_from_the_back.ozz  death_from_the_front.ozz  idle.ozz  idle_aiming.ozz  idle_crouching.ozz  idle_crouching_aiming.ozz  jump_down.ozz  jump_loop.ozz  jump_up.ozz  pose.ozz  run_backward.ozz  run_backward_left.ozz  run_backward_right.ozz  run_forward_inPlace.ozz  run_forward_left.ozz  run_forward_right.ozz  run_left.ozz  run_right.ozz  skeleton.ozz  sprint_backward.ozz  sprint_backward_left.ozz  sprint_backward_right.ozz  sprint_forward_inPlace.ozz  sprint_forward_left.ozz  sprint_forward_right.ozz  sprint_left.ozz  sprint_right.ozz  turn_90_left.ozz  turn_90_right.ozz  walk_backward.ozz  walk_backward_left.ozz  walk_backward_right.ozz  walk_crouching_backward.ozz  walk_crouching_backward_left.ozz  walk_crouching_backward_right.ozz  (+10 more)
animations/character/fxb/: crouching_turn_90_right.fbx  death_from_right.fbx  death_from_the_back.fbx  death_from_the_front.fbx  idle.fbx  idle_crouching_aiming.fbx  jump_loop.fbx  pose.fbx  run_backward.fbx  run_backward_left.fbx  run_forward_inPlace.fbx  run_forward_right.fbx  sprint_backward.fbx  sprint_backward_left.fbx  sprint_backward_right.fbx  sprint_forward_left.fbx  sprint_left.fbx  turn_90_left.fbx  turn_90_right.fbx  walk_backward_left.fbx  walk_crouching_backward_right.fbx  walk_crouching_forward_left.fbx  walk_forward_left.fbx  walk_forward_right.fbx  walk_right.fbx
characters/male1/: character.json  character_raw_anim.json  death_from_back_headshot.fbx  death_from_back_headshot.ozz  death_from_front_headshot.fbx  death_from_front_headshot.ozz  idle.fbx  idle_skel.ozz  sprint_forward.fbx  walk_forward.fbx  walk_forward.ozz
characters/male1/abdomen/: object.json
characters/male1/arm.right/: object.json
characters/male1/chest/: object.json
characters/male1/foot.right/: object.json
common/: clock.h  common.cpp  common.h  config.h  file_system.h  json.h  log.cpp  log.h  metadata.cpp  metadata.h  optional.h  statistics.h
data/: constant.fs  passthrough.vs  screenspace.fs  simple.vs  wireframe.gs
ext/: glad.c
ext/glad/: glad.h
geom/: aabb.h  box.h  geometry.h  grid.h  image_mesher.cpp  image_mesher.h  mesh.h  mesh_common.h  mesh_deformer.cpp  mesh_deformer.h  mesh_simplifier.h  mesher_common.h  meta.h  ray.h  rect.h  size.h  sn_mesher.h  transform.h  volume.h
gfx/: anti_alias.cpp  anti_alias.h  arrow.cpp  arrow.h  backdrop.cpp  backdrop.h  bloom.cpp  bloom.h  blur.cpp  blur.h  color_grade.cpp  color_grade.h  erode.cpp  erode.h  fader.cpp  fader.h  geometry.cpp  geometry.h  grid.cpp  grid.h  lighting.cpp  lighting.h  lightmap.cpp  lightmap.h  lightmapper.cpp  lightmapper.h  mipmap.cpp  mipmap.h  outline.cpp  outline.h  output.cpp  output.h  preview.cpp  preview.h  render_stats.cpp  render_stats.h  ssao.cpp  ssao.h  ssr.cpp  ssr.h
gl/: buffers.cpp  buffers.h  fbo.cpp  fbo.h  gl_buffers.cpp  gl_fbo.cpp  gl_fbo.h  gl_rbo.cpp  gl_texture.cpp  gl_texture.h  gpu_clock.h  primitive.h  rbo.cpp  rbo.h  shaders.cpp  shaders.h  texture.cpp  texture.h  texture_atlas.cpp  texture_atlas.h  uniforms.h  vao.cpp  vao.h
img/: color.h  image.cpp  image.h  image_atlas.cpp  image_atlas.h  image_cube.cpp  image_cube.h  painter.cpp  painter.h
objects/box/: light.top.pdn
objects/debug2/: object.json
objects/floor_label/: object.json
objects/head/: object.json
objects/light1/: object.json
objects/screen/: object.json
objects/screen2/: object.json
objects/tech_floor2/: object.json
objects/thigh/: object.json
objects/torso/: object.json
objects/tree/: object.json
objects/waist/: object.json
platform/: clock.h  context.cpp  context.h  display.cpp  display.h  gl.h  mouse.cpp  mouse.h  scheduler.cpp  scheduler.h
res/: highcaliber.exe.manifest  highcaliber.rc  paybacktime.exe.manifest  paybacktime.rc
scene/: animation.cpp  animation.h  camera.cpp  camera.h  camera_control.cpp  camera_control.h  character.cpp  character.h  horizon.cpp  horizon.h  horizon_store.cpp  horizon_store.h  material_types.h  model.cpp  model.h  object.cpp  object.h  object_store.cpp  object_store.h  scene.cpp  scene.h  scene_control.cpp  scene_control.h  scene_item.h  state.cpp  state.h  texture_store.cpp  texture_store.h
scenes/: base.scn  character.scn  density.scn  density2.scn  density3.scn  doorway.scn  glass.scn  glow.scn  hallway.scn  large.scn  scene.scn  skeleton.scn  small_base.scn
scripts/: ozz_anim.rb
shaders/: add.fs.glsl  backdrop.fs.glsl  bloom.fs.glsl  blur.fs.glsl  blur_bi.fs.glsl  color.fs.glsl  color_grade.fs.glsl  common.fs.glsl  denoise.fs.glsl  emissive.fs.glsl  erode.fs.glsl  erode.glsl  fxaa.fs.glsl  gaussian.fs.glsl  geometry.fs.glsl  geometry.vs.glsl  geometry_transparent.fs.glsl  geometry_transparent.vs.glsl  grid.fs.glsl  lambert.fs.glsl  lighting.fs.glsl  lighting_gi.fs.glsl  lighting_scattering.fs.glsl  lightmapper.fs.glsl  lightmapper_debug.fs.glsl  lightmapper_upscale.fs.glsl  linear_depth.fs.glsl  model.fs.glsl  model.vs.glsl  model_pos.vs.glsl  oit_composite.fs.glsl  outline.fs.glsl  output.fs.glsl  phong.fs.glsl  quad_uv.vs.glsl  sampling.fs.glsl  screenspace.fs.glsl  simple.vs.glsl  ssao.fs.glsl  ssao_blur.fs.glsl  (+5 more)
ui/: display.cpp  display.h  object_pane.cpp  object_pane.h  object_selector.cpp  object_selector.h  render_stats.cpp  render_stats.h  scene_pane.cpp  scene_pane.h  tools_window.cpp  tools_window.h
(+78 files in other folders)
